Fix navigation by moving logo to z-index: -1

--- a/public/styles/NewHirePacket.css
+++ b/public/styles/NewHirePacket.css
@@ -5,7 +5,8 @@
 
 .logo {
     position: absolute;
-    bottom: 0;
+    top: 0;
     left: 30%;
     opacity: .05;
+    z-index: -1;
 }
